# fun-for-fun

./: .gitignore  .ocamlformat  Makefile  Readme.md  default.nix  dune-project  dune-workspace  fun4fun.opam  shell.nix  watermark.sh
.github/workflows/: ci.yml
lib/back/: closure_translator.ml  cprint1.ml  ctree.ml  dune
lib/clos/: closure.ml  dune  lift.ml  lift.mli
lib/common/: dune  ident.ml  ident.mli  list_utils.ml
lib/lam/: compile.ml  compile.mli  dune  tree.ml
lib/norm/: dune  normalize.ml  normalize.mli
lib/sugar/: ast.ml  desugar.ml  desugar.mli  dune
lib/syntax/: Tools.ml  ast.ml  dune  lexer.mll  parser.mly  parsetree.ml  parsing.ml  parsing.mli  types_in.ml
lib/test/: back_test.ml  desugar_test.ml  dune  lift_test.ml  lower_test.ml  parse_test.ml  render_typed_test.ml  typing_test.ml  unify_test.ml
lib/type_check/: check.ml  dune
lib/typing/: alias.ml  check.ml  dune  env.ml  poly.ml  read_type.ml  render.ml  report.ml  subtype.ml  tools.ml  typedtree.ml  types.ml  types_ext.ml  types_in.ml  unify.ml  unify.mli  util.ml
runtime/: .clang-format  CMakeLists.txt  dune
runtime/include/: fun_rt.h  fun_rt.hpp  fun_rt_core.hpp  fun_rt_lib.hpp
runtime/src/: fun_rt.c  fun_rt.cpp  fun_rt_core.cpp  fun_rt_lib.cpp
runtime/tests/: CMakeLists.txt  test_runtime_operations.cpp
tests/: dune  ff_wrapper
tests/cram/: dune  ff_wrapper
tests/cram/test_dirs/assert.t/: run.t  test_assert.fun
tests/cram/test_dirs/equality.t/: run.t
tests/cram/test_dirs/even.t/: run.t  test_even.fun
tests/cram/test_dirs/external.t/: run.t
tests/cram/test_dirs/hello.t/: hello.fun  run.t
tests/cram/test_dirs/interp.t/: run.t  test_rec_ty.fun
tests/cram/test_dirs/interval_functor.t/: run.t  test_interval.fun
tests/cram/test_dirs/list.t/: run.t  test_list.fun
tests/cram/test_dirs/literal.t/: run.t  test_literal.fun
tests/cram/test_dirs/match.t/: run.t  test_match.fun  test_unhandled.fun
tests/cram/test_dirs/simple.t/: fib.fun  run.t
tests/cram/test_dirs/simple_functor.t/: run.t  test_increment_functor.fun
tests/cram/test_dirs/sort.t/: run.t  test_sort.fun
tests/cram/test_dirs/sum.t/: run.t
tests/cram/test_dirs/syntax_error.t/: run.t  test_syntax_error.fun
tests/cram/test_dirs/unit.t/: run.t  test_unit.fun
tests/cram/test_dirs/value_pattern.t/: run.t  test_value_pattern.fun
tests/cram/test_dirs/wildcard.t/: run.t  test_wildcard.fun
tests/regular/: dune  lift_test.ml  lower_test.ml  parse_test.ml  render_typed_test.ml  syntax_error_test.ml  typing_test.ml  typing_util_test.ml  unify_test.ml
tests/simple.t/: run.t
tests/stress/: dune  ff_wrapper  fib.fun  rand_struct_access.ml  sum.fun  test_entry.ml  util.ml
tests/test_dirs/equality.t/: run.t  test_equality.fun
tests/test_dirs/external.t/: run.t  test_add_external.fun  test_external.fun
tests/test_dirs/hello.t/: hello.fun  run.t
tests/test_dirs/match.t/: run.t  test_match.fun
tests/test_dirs/simple.t/: run.t  simple.fun
tests/test_dirs/sum.t/: run.t  sum.fun
tests/test_dirs/unit.t/: run.t
