(library
 (name runtime))

(rule
 (targets libfun_rt.a fun_rt.h)
 (deps
  (source_tree include)
  (source_tree src)
  (file CMakeLists.txt))
 (action
  (progn
   (run cmake -B build -S .)
   (run cmake --build build)
   (run cp build/libfun_rt.a ./)
   (run cp include/fun_rt.h ./))))

(install
 (section share)
 (files fun_rt.h libfun_rt.a))
