(env
 (_
  (binaries ff_wrapper)))

(test
 (name test_entry)
 (libraries unix qcheck qcheck-alcotest lwt lwt.unix)
 (deps
  %{bin:ff}
  %{bin:ff_wrapper}
  (glob_files *.fun)
  %{lib-private:runtime:libfun_rt.a}
  %{lib-private:runtime:fun_rt.hpp}
  %{lib-private:runtime:fun_rt_core.hpp}
  %{lib-private:runtime:fun_rt_lib.hpp}))
